--- a/pFinal/problemaFinal.html
+++ b/pFinal/problemaFinal.html
@@ -37,7 +37,7 @@
             <label><br/>Department<br/></label>
             <input type="text" id="dep" ><br>
 
-            <button type="button" onclick="exe()">format</button> 
+            <button type="button" onclick="exe()">Enter</button> 
 
         </form>
 
