--- a/problema5.html
+++ b/problema5.html
@@ -29,10 +29,8 @@
                     return sum/elements.length
                 }
 
-
-                console.log("media "+media(numbers));
-                //vari(numbers,media(numbers));
-                console.log("desviacion estandar " + Math.sqrt(vari(numbers,media(numbers))));
+                document.write("Media: "+media(numbers));
+                document.write("<br/>Desviacion estandar: " + Math.sqrt(vari(numbers,media(numbers))));
             }
 
             
